<resources>
    <string name="app_name">Score</string>
    <string name="start_button">Start</string>
    <string name="gameTitle">Track Your Points</string>
    <string name="player">Player</string>
    <string name="player_name">Player name</string>
    <string name="edit_player_title">Edit player name</string>
    <string name="player_name_ok">Ok</string>
    <string name="player_name_cancel">Cancel</string>
    <string name="number_of_players">Players</string>
    <string name="number_of_players_default">2</string>
    <string name="number_of_players_summary">Enter the number of players</string>
    <string name="number_of_players_dialog_title">Select the value</string>
    <string name="score_autosave">Score autosave</string>
    <string name="score_autosave_summary">Automatically save the winner\'s score to the leaderboard</string>
    <string name="pref_gameplay_category">Gameplay</string>
    <string name="title_activity_settings">Settings</string>
    <string name="starting_num_of_points">Points</string>
    <string name="starting_num_of_points_default">50</string>
    <string name="starting_num_of_points_summary">Enter the starting number of points</string>
    <string name="starting_num_of_points_dialog_title">Select the value</string>
</resources>
